# Almost-Died-Today

./: .gitignore  BUG.md  JOURNAL.md  README.md  blank.rs  docker-compose.yaml
backend/: .env.example  Cargo.toml  Dockerfile  NASAAPI.md  error.rs
backend/migrations/: 20230803200245_add_asteroid_table.down.sql  20230803200245_add_asteroid_table.up.sql  20230810220109_add_user_table.up.sql
backend/src/: db.rs  error.rs  handlers.rs  layers.rs  lib.rs  main.rs  routes.rs  template.rs
backend/src/handlers/: main_handlers.rs  mod.rs
backend/src/models/: asteroid.rs  mod.rs  page.rs  user.rs
backend/src/routes/: main_routes.rs  mod.rs
backend/static/: page_styles.css  search_styles.css  styles.css
backend/templates/: index.html  pages.html  protected.html  search_result.html  success.html
backend/templates/styles/: main.css
backend/tests/: integration_tests.rs
backend/tests/fixtures/: 0001_seed_as.sql  0002_seed_user.sql
client/src/: main.rs
