[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "Unlicense"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6.2", features= ["headers", "macros"] }
axum-macros = "0.3.1"
dotenvy = "0.15.6"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
futures = "0.3.1"
http = "0.2.9"
hyper = "0.14.26"
jsonwebtoken = "8.0.1"
lazy_static = "1.4"
mime = "0.3.17"
once_cell = "1.18"
paste = "1.0"
rand = "0.8.5"
rust-argon2 = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
tera = "1"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.9.1"
